--- a/package.json
+++ b/package.json
@@ -34,5 +34,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "<!-- Regal Admin App -->",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mahendra249/adimregal.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Mahendra249/adimregal/issues"
+  },
+  "homepage": "https://github.com/Mahendra249/adimregal#readme"
 }
